# mdb-runtime

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  PUBLISHING.md  README copy.md  README.md  SETUP.md  blog.md  pyproject.toml  pytest.ini  setup.py
.cursor/rules/: mdb.mdc
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  security.yml
config/: README.md
docs/: AUTHZ.md  BEST_PRACTICES.md  CI_CD_OPTIMIZATION.md  FAQ.md  MANIFEST_DEEP_DIVE.md  MANIFEST_REFERENCE.md  MDB_ENGINE.md  MDB_ENGINE_101.md  QUICK_START.md  README.md  SECURITY.md  blog.md
docs/api/: .gitkeep
docs/guides/: .gitkeep  testing.md
examples/: README.md
examples/advanced/multi_app/: Dockerfile  README.md  docker-compose.yml  mdb-engine.md
examples/advanced/multi_app_shared/: Dockerfile  README.md  docker-compose.yml  mdb-engine.md
examples/advanced/oblivio-apps-v0/: Dockerfile  Dockerfile.bundled  README.md  docker-compose.bundled.yml  docker-compose.yml  start-all-apps.py
examples/advanced/simple_app/: Dockerfile  README.md  docker-compose.yml  mdb-engine.md  web.py
examples/advanced/sso-multi-app/: Dockerfile  Dockerfile.bundled  README.md  docker-compose.bundled.yml  docker-compose.yml  start-all-apps.py
examples/basic/chit_chat/: docker-compose.yml  manifest.json  web.py
examples/basic/interactive_rag/: Dockerfile  docker-compose.yml  web.py
examples/basic/oso_hello_world/: README.md  docker-compose.yml  web.py
examples/basic/parallax/: Dockerfile  README.md  debug.py  docker-compose.yml  manifest.json  parallax.py  schemas.py  web.py
examples/basic/parallax_memory/: CALLS.json  Dockerfile  LONGITUDINAL_AI.md  README.md  docker-compose.yml  manifest.json  parallax.py  requirements.txt  schema_generator.py  schemas.py  (+1 more)
examples/chit_chat/: Dockerfile  docker-compose.yml  manifest.json  prompts.py  requirements.txt  seed_demo.py  testing.py  web.py
examples/hello_world/: .dockerignore  .dockerignore.root  .gitignore  DOCKER_BEST_PRACTICES.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  main.py  manifest.json  requirements.txt  web.py
examples/interactive_rag/: Dockerfile  README.md  docker-compose.yml  env.example  manifest.json  requirements.txt  web.py
examples/oso_hello_world/: Dockerfile  README.md  docker-compose.yml  main.polar  manifest.json  requirements.txt  web.py
examples/parallax/: Dockerfile  README.md  docker-compose.yml  main.py  manifest.json  parallax.py  requirements.txt  schema_generator.py  schemas.py  web.py
examples/vector_hacking/: Dockerfile  README.md  docker-compose.yml  embedding_example.py  main.py  manifest.json  requirements.txt  vector_hacking.py  web.py
githooks/: README.md  pre-commit  pre-push
mdb_engine/: __init__.py  config.py  constants.py  dependencies.py  exceptions.py
mdb_engine/auth/: ARCHITECTURE.md  README.md  __init__.py  audit.py  base.py  casbin_factory.py  casbin_models.py  config_defaults.py  config_helpers.py  cookie_utils.py  csrf.py  decorators.py  dependencies.py  helpers.py  integration.py  jwt.py  middleware.py  oso_factory.py  provider.py  rate_limiter.py  restrictions.py  session_manager.py  shared_middleware.py  shared_users.py  sub_auth.py  token_lifecycle.py  token_store.py  users.py  utils.py
mdb_engine/cli/: utils.py
mdb_engine/core/: README.md  __init__.py  app_registration.py  app_secrets.py  connection.py  encryption.py  engine.py  index_management.py  manifest.py  ray_integration.py  seeding.py  service_initialization.py  types.py
mdb_engine/database/: README.md  __init__.py  abstraction.py  connection.py  query_validator.py  resource_limiter.py  scoped_wrapper.py
mdb_engine/di/: __init__.py  container.py  providers.py  scopes.py
mdb_engine/embeddings/: __init__.py  dependencies.py  service.py
mdb_engine/indexes/: README.md  __init__.py  helpers.py  manager.py
mdb_engine/memory/: README.md  __init__.py  service.py
mdb_engine/observability/: README.md  __init__.py  health.py  logging.py  metrics.py
mdb_engine/repositories/: __init__.py  base.py  mongo.py  unit_of_work.py
mdb_engine/routing/: README.md  __init__.py  websockets.py
mdb_engine/utils/: __init__.py  mongo.py
mdb_runtime/: README.md  __init__.py  config.py  constants.py  exceptions.py
mdb_runtime/actors/: __init__.py
mdb_runtime/auth/: __init__.py  dependencies.py  jwt.py  provider.py  restrictions.py  sub_auth.py
mdb_runtime/cache/: __init__.py
mdb_runtime/core/: __init__.py  engine.py  manifest.py
mdb_runtime/database/: __init__.py  abstraction.py  connection.py  scoped_wrapper.py
mdb_runtime/indexes/: __init__.py  helpers.py  manager.py
mdb_runtime/llm/: __init__.py  embedding_service.py  service.py
mdb_runtime/multi_tenancy/: __init__.py
mdb_runtime/observability/: __init__.py  health.py  logging.py  metrics.py
mdb_runtime/resilience/: __init__.py
mdb_runtime/routing/: README.md  __init__.py  websockets.py
mdb_runtime/security/: __init__.py
mdb_runtime/testing/: __init__.py
mdb_runtime/utils/: __init__.py  decorators.py  validation.py
scripts/: README.md  check_exception_handling.py  count_lint_errors.py  format-for-ci.sh  install-hooks.sh  run_tests.sh
tests/: README.md  __init__.py  conftest.py  docker-compose.test.yml
tests/cli/: test_show.py
tests/integration/: __init__.py  test_connection_pooling.py  test_engine_integration.py  test_index_management.py  test_scoped_isolation.py  test_seeding_integration.py
tests/unit/: __init__.py  test_abstraction.py  test_app_registration.py  test_connection.py  test_dependencies.py  test_engine.py  test_exceptions.py  test_index_management.py  test_manifest.py  test_metrics.py  test_query_validator.py  test_ray_integration.py  test_resource_limiter.py  test_scoped_wrapper.py  test_scoped_wrapper_extended.py  test_scoped_wrapper_security_integration.py  test_seeding.py  test_service_initialization.py
(+105 files in other folders)
