[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mdb-engine"
version = "0.1.6"
description = "MongoDB Engine"
readme = "mdb_engine/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mongodb", "runtime", "engine", "database", "scoping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "motor>=3.0.0",
    "pymongo>=4.0.0",
    "fastapi>=0.100.0",
    "pydantic>=2.0.0",
    "pyjwt>=2.8.0",
    "jsonschema>=4.0.0",
    "bcrypt>=4.0.0",
    "mem0ai>=1.0.0",
    "semantic-text-splitter>=0.9.0",
    "numpy>=1.0.0,<2.0.0",
    "openai>=1.0.0",  # Required for embedding providers
    "azure-identity>=1.15.0",  # Required for mem0's azure_openai provider
]

[project.optional-dependencies]
casbin = ["casbin>=1.0.0", "casbin-motor-adapter>=0.1.0"]
oso = ["oso-cloud>=0.1.0"]
llm = [
    # LLM packages removed - examples should implement their own LLM clients
]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    "testcontainers>=3.7.0",
]
dev = [
    "black>=24.1.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-bugbear>=24.2.0",
    "flake8-comprehensions>=3.14.0",
    "flake8-import-order>=0.18.2",
    "pre-commit>=3.5.0",
]
all = [
    "casbin>=1.0.0",
    "casbin-motor-adapter>=0.1.0",
    "oso-cloud>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mdb-engine"
Documentation = "https://github.com/yourusername/mdb-engine#readme"
Repository = "https://github.com/yourusername/mdb-engine"
Issues = "https://github.com/yourusername/mdb-engine/issues"
